# P2P-Energy-Trading-System-V

./: .gitignore  .ruff.toml  README.md  check_data.py  generate_synthetic_data.py  index.html  kls_vdit_hourly_market.csv  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  ruff_output.json  smoke_test_env.py  style.css
config/: eval_config.yaml  training_config.yaml
results/: evaluation_report.md  evaluation_summary.json  summary_metrics.csv
results/latex/: table_ablation_results.tex  table_grid_safety.tex  table_main_results.tex  table_market_metrics.tex
results/seed_1024/: grid_only_per_episode.csv  heuristic_per_episode.csv  random_per_episode.csv  trained_per_episode.csv
results/seed_123/: grid_only_per_episode.csv  heuristic_per_episode.csv  no_battery_per_episode.csv  random_per_episode.csv  trained_per_episode.csv
results/seed_42/: grid_only_per_episode.csv  heuristic_per_episode.csv  no_battery_per_episode.csv  random_per_episode.csv  trained_per_episode.csv
results/seed_456/: grid_only_per_episode.csv  heuristic_per_episode.csv  random_per_episode.csv  trained_per_episode.csv
results/seed_789/: grid_only_per_episode.csv  heuristic_per_episode.csv  random_per_episode.csv  trained_per_episode.csv
src/p2p_energy_trading/: __init__.py  constants.py  exceptions.py
tests/: conftest.py
tests/integration/: test_api_integration.py  test_evaluation_pipeline.py  test_rllib_integration.py  test_training_loop.py
tests/unit/: test_api_models.py  test_baselines.py  test_battery.py  test_centralized_critic.py  test_checkpoint_uri.py  test_market.py  (+7 more)
(+68 files in other folders)
